sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:9: error: not found: value u
  echange(u,x)
          ^