sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
var j=0
var x=0
while(j<getNombreValeurs()-1){
  for (i <- j to getNombreValeurs() -1){
    if(plusPetit(j,x))
    	{x=j}
  echange(u,x)
  j+=1
  }
}}